[package]
name = "kt"
version = "0.1.0"
edition = "2021"
description = "Quick and dirty key viewer and reformatter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.10", features = ["derive"] }
der = "0.5.1"
env_logger = "0.9.0"
log = "0.4.14"
pkcs1 = { version = "0.3.3", features = ["alloc", "pem", "std"] }
pkcs8 = { version = "0.8.0", features = ["alloc", "pem", "std", "encryption"] }
sec1 = { version = "0.2.1", features = ["alloc", "pem", "std"] }
spki = { version = "0.5.4", features = ["alloc", "pem", "std"] }
thiserror = "1.0.30"
